
* Deleting xml property, "Display Units as Counters", and will replace it with a map.properties property "units.stack.size", because display options should not be in the xml, only game logic should be. (veqryn)

* Created new "map.properties" variables: "map.scrollWrapY", "map.showResources", and "screenshot.title.enabled". (veqryn)

* Creating a ConnectionFinder for the 'map' part of the xml. (edwin van der wal)

* Adding Mnemonics to menu options in game. (frigoref)

* Improved performance of Polygon Grabber and added a auto-grab to it to will attempt to grab any polygon that does not contain other polygons, based on the centers file. (edwin & veqryn)

* Set up UI for map creator, fixed it up to be able to run all utility files, including sending arguments to them. (veqryn)

* Creating a new Map Creator / Map Maker that is accessible from the Engine Preferences section of TripleA. (veqryn)

* Updating TileImageBreaker and PlacementPicker to include more notes on how to use them, as well as fixing some bugs and allowing arguments and remembering selections. (veqryn)

* Updating CenterPicker and PolygonGrabber and AutoPlacementFinder to include more notes on how to use them, as well as allowing arguments and remembering selections. (veqryn)

* Fixing Global 1940 to match 2nd Edition version. (veqryn)

* Preventing fighters that used up all movement to get to a battle, from getting to retreat. (veqryn)

* Allowing PlacementPicker and AutoPlacementFinder to accept two arguments (when run by command line), the width and the height, of the placements. (veqryn)

* Fixed issues preventing the smallMap from being updated after switching map skins. Also polishing up support for map skins that are totally different than the original map. (veqryn)

* Creating new "map.properties" variables: "units.width", "units.height", "units.counter.offset.width" and "units.counter.offset.height", allowing maps to use non-standard sized unit images. (veqryn)
